[package]
name = "emacs-rust-module"
version = "0.1.0"
authors = ["Sebastian Wiesner <swiesner@lunaryorn.com>"]
build = "build.rs"

[build-dependencies]
# Nail down bindgen to a particular version as we'd not like to have the
# generated bindings change without notice
bindgen = "^0.19"
# Other build deps are fine in whatever version; they'll break the build but not
# silently change it
curl = "*"
env_logger = "*"

[lib]
crate-type = ["cdylib"]
