[package]
name = "emacs-module"
version = "0.1.0"
authors = ["Sebastian Wiesner <swiesner@lunaryorn.com>"]
repository = "https://github.com/lunaryorn/emacs-rust-module"
license = "GPL-3"
description = "Bindings for the Emacs module API"

[dependencies]
emacs-module-sys = { path = "emacs-module-sys", version = "~25.1" }

[lib]
name = "emacs_module"
crate-type = ["cdylib"]
